--- a/co.html
+++ b/co.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<title></title>
+	<meta charset="utf-8">
+	<a href="我的主页.html">我的主页</a>
+	<a href="index.html">index</a>
+	<a href="co.html">co</a>
 </head>
 <body>
 	<dd>where</dd>
