--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<title>Documen</title>
 	<meta charset="utf-8">
+	<a href="我的主页.html">我的主页</a>
+	<a href="index.html">index</a>
+	<a href="co.html">co</a>
 </head>
 <body>
 <script type="text/javascript" >
