--- a/pictures.html
+++ b/pictures.html
@@ -13,5 +13,12 @@
 	<dd><a href="time.html">时光</a></dd>
 	</h1>
 	</div>
+
+
+
+
+
+
+	<h1>简单明了的三页，谢谢你们，20岁的路就此开始了，还是那句话别让璀璨的美梦落满灰尘</h1>
 </body>
 </html>
