--- a/time.html
+++ b/time.html
@@ -4,6 +4,9 @@
 	<title>时光</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="today.css">
+</head>
+<body>
+	
 	<div id="top" align="center">
 	<h1>
 	<dd><a href="pictures.html">图片集</a></dd>
@@ -11,10 +14,14 @@
 	<dd><a href="time.html">时光</a></dd>
 	</h1>
 	</div>
-</head>
-<body>
-	
-	
+
+
+
+
+	<h1>感谢今日有你们</h1>
+	<h1>year: 2017</h1>
+	<h1>month： 11</h1>
+	<h3>today: 19</h3>
 
 </body>
 </html>
