--- a/the rain/index.html
+++ b/the rain/index.html
@@ -11,19 +11,27 @@
 
 <body>
     <div class="all">
-        <div class="Top">Top</div>
+        <div class="Top">
+            <h1>瓜雨雨代购商店</h1>
+        </div>
         <div class="bodyMain">
-            <div class="one">春</div>
-            <div class="two">夏</div>
-            <div class="three">秋</div>
-            <div class="four">冬</div>
+            <div class="one">
+                <a href="chun.html"><img src="pic/chun1.png">
+            </div>
+            <div class="two">
+                <a href="xia.html"><img src="pic/xia1.png">
+            </div>
+            <div class="three">
+                <a href="qiu.html"><img src="pic/qiu1.png"></div>
+            <div class="four">
+                <a href="dong.html"><img src="pic/dong1.png"></div>
         </div>
         <div class="under">
             <div class="underOne">underOne</div>
         </div>
 
     </div>
-    <footer class="underlast">@——————————————————————————</footer>
+    <footer class="underlast">@瓜雨雨版权所有</footer>
 
 </body>
 
