--- a/the rain/dong.html
+++ b/the rain/dong.html
@@ -20,6 +20,10 @@
             <a href="dong.html">冬季</a>
         </div>
     </div>
+
+    <div class="body1">
+        <h1>此页设计为商品图片旋转进入</h1>
+    </div>
 </body>
 
 </html>
