--- a/the rain/xia.html
+++ b/the rain/xia.html
@@ -44,7 +44,7 @@
 
         </div>
     </div>
-    <footer class="under"> @____________________ </footer>
+    <footer class="under"> @瓜雨雨版权所有</footer>
 </body>
 
 </html>
