--- a/the rain/chun.html
+++ b/the rain/chun.html
@@ -41,7 +41,7 @@
         </div>
     </div>
     <div class="under">
-        <footer>@________________</footer>
+        <footer>@瓜雨雨版权所有</footer>
     </div>
 </body>
 
