--- a/the rain/index.html
+++ b/the rain/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>主页</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
+    <script src="JS/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="bootstrap.min.css">
 </head>
 
 <body>
