--- a/the rain/chun.html
+++ b/the rain/chun.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>思雨代购群之春季</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="chun.css">
+    <link rel="stylesheet" href="css/chun.css">
 </head>
 
 <body>
