--- a/the rain/dong.html
+++ b/the rain/dong.html
@@ -7,7 +7,7 @@
     <title> 冬</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <link rel="stylesheet" href="dong.css">
+    <link rel="stylesheet" href="css/dong.css">
 </head>
 
 <body>
