--- a/the rain/xia.html
+++ b/the rain/xia.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>夏季</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="xia.css">
+    <link rel="stylesheet" href="css/xia.css">
 </head>
 
 <body>
