--- a/product—HC/chun.html
+++ b/product—HC/chun.html
@@ -41,7 +41,7 @@
         </div>
     </div>
     <div class="under">
-        <footer>@瓜雨雨版权所有</footer>
+        <footer>@版权所有</footer>
     </div>
 </body>
 
