--- a/product—HC/index.html
+++ b/product—HC/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="all">
         <div class="Top">
-            <h1>瓜雨雨代购商店</h1>
+            <h1>商店</h1>
         </div>
         <div class="bodyMain">
             <div class="one">
@@ -31,9 +31,14 @@
         <div class="under">
             <div class="underOne">underOne</div>
         </div>
+    </div>
+
+    <div class="footer">
+
+        <h1>@版权所有</h1>
 
     </div>
-    <footer class="underlast">@瓜雨雨版权所有</footer>
+
 
 </body>
 
