--- a/product—HC/chun.html
+++ b/product—HC/chun.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>思雨代购群之春季</title>
+    <title>春季</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/chun.css">
 </head>
@@ -17,7 +17,7 @@
                 <a href="xia.html">夏季</a>
             </div>
             <div class="zi">
-                <h1>瓜雨雨之春季品</h1>
+                <h1>春季品</h1>
             </div>
             <div class="just2">
                 <a href="qiu.html">秋季</a>
@@ -40,8 +40,10 @@
             <div class="hezi12"></div>
         </div>
     </div>
-    <div class="under">
-        <footer>@版权所有</footer>
+    <div class="footer">
+
+        <p>@版权所有</p>
+
     </div>
 </body>
 
