--- a/product—HC/qiu.html
+++ b/product—HC/qiu.html
@@ -32,8 +32,12 @@
 
     </div>
 
-    <footer class="underlast">@版权所有</footer>
+    <div class="footer">
+
+        <p>@版权所有</p>
+
     </div>
+
 
 
 </body>
