--- a/product—HC/chun.html
+++ b/product—HC/chun.html
@@ -17,7 +17,7 @@
                 <a href="xia.html">夏季</a>
             </div>
             <div class="zi">
-                <h1>春季品</h1>
+                <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;春季品</h1>
             </div>
             <div class="just2">
                 <a href="qiu.html">秋季</a>
@@ -26,14 +26,40 @@
             </div>
         </div>
         <div class="bodyAll">
-            <div class="hezi1"></div>
-            <div class="hezi2"></div>
-            <div class="hezi3"></div>
-            <div class="hezi4"></div>
-            <div class="hezi5"></div>
-            <div class="hezi6"></div>
-            <div class="hezi7"></div>
-            <div class="hezi8"></div>
+            <div class="hezi1">
+                <img src="pic/2.jpg" alt="">
+                <p>1231</p>
+            </div>
+            <div class="hezi2">
+                <img src="pic/3.jpg" alt="">
+                <p>
+                    faf
+                </p>
+            </div>
+            <div class="hezi3">
+                <img src="pic/2.jpg" alt="">
+                <p>ggsg</p>
+            </div>
+            <div class="hezi4">
+                <img src="pic/3.jpg" alt="">
+                <p>gsg</p>
+            </div>
+            <div class="hezi5">
+                <img src="pic/2.jpg" alt="">
+                <p>gss</p>
+            </div>
+            <div class="hezi6">
+                <img src="pic/3.jpg" alt="">
+                <p>gsg</p>
+            </div>
+            <div class="hezi7">
+                <img src="pic/2.jpg" alt="">
+                <p>ggrheH</p>
+            </div>
+            <div class="hezi8">
+                <img src="pic/3.jpg" alt="">
+                <p>gwgg</p>
+            </div>
             <div class="hezi9"></div>
             <div class="hezi10"></div>
             <div class="hezi11"></div>
