--- a/product—HC/qiu.html
+++ b/product—HC/qiu.html
@@ -21,12 +21,12 @@
 
     </div>
     <div class="body">
-        <div class="one">1</div>
-        <div class="two">2</div>
-        <div class="three">3</div>
-        <div class="four">4</div>
-        <div class="five">5</div>
-        <div class="six">6</div>
+        <div class="one"><img src="pic/5.jpg" alt=""> 1</div>
+        <div class="two"><img src="pic/4.jpg" alt=""> 2</div>
+        <div class="three"><img src="pic/5.jpg" alt=""> 3</div>
+        <div class="four"><img src="pic/4.jpg" alt=""> 4</div>
+        <div class="five"><img src="pic/5.jpg" alt=""> 5</div>
+        <div class="six"><img src="pic/4.jpg" alt=""> 6</div>
     </div>
     <div class="top">
 
